# flink-training

./: .tool-versions  Dockerfile  README.md  docker-compose.yml  pyproject.toml
flink/: .flake8  pyproject.toml
flink-consumer/: README.md
flink/src/: __main__.py
kafka-broker/: README.md  docker-entrypoint.sh
kafka-broker/config/: server.properties
kafka-producer/: README.md  docker-entrypoint.sh
kafka-zookeeper/: docker-entrypoint.sh
kafka-zookeeper/config/: zookeeper.properties
src/flink_training/: __init__.py  __main__.py
